examples/should_fail/unknown_math_method.fred
let y = Math.frobnicate(4)
print(y)
